crates/cobrust-lsp/tests/snapshots/rename_e2e__snapshot_prepare_rename_known_symbol.snap
---
source: crates/cobrust-lsp/tests/rename_e2e.rs
expression: result
snapshot_kind: text
---
{
  "start": {
    "line": 0,
    "character": 4
  },
  "end": {
    "line": 0,
    "character": 5
  }
}
