crates/cobrust-lsp/tests/snapshots/rename_e2e__snapshot_rename_workspace_edit.snap
---
source: crates/cobrust-lsp/tests/rename_e2e.rs
expression: edits
snapshot_kind: text
---
[
  {
    "range": {
      "start": {
        "line": 0,
        "character": 4
      },
      "end": {
        "line": 0,
        "character": 5
      }
    },
    "newText": "y"
  },
  {
    "range": {
      "start": {
        "line": 1,
        "character": 0
      },
      "end": {
        "line": 1,
        "character": 1
      }
    },
    "newText": "y"
  }
]
